<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <item
            android:id="@+id/mylove"
            android:title="@string/lova" />
        <item
            android:id="@+id/mode"
            android:title="@string/smart" />

        <item
            android:id="@+id/search_menu"
            android:title="@string/search" />
        <item
            android:id="@+id/new_account"
            android:title="@string/another" />
        <item
            android:id="@+id/load_account"
            android:title="@string/newac" />

        <item
            android:id="@+id/history"
            android:title="@string/history" />

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
